RESOLVED FIXED99809
[Qt] REGRESSION(r131858): It broke the ARM build
https://bugs.webkit.org/show_bug.cgi?id=99809
Summary [Qt] REGRESSION(r131858): It broke the ARM build
Nandor Huszka
Reported 2012-10-18 23:07:03 PDT
http://build.webkit.sed.hu/builders/ARMv7%20Linux%20Qt5%20Release%20%28Build%29/builds/13517 In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGJITCompiler.h:32:0, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGOperations.h:31, from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:29: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGCCallHelpers.h: In member function 'void JSC::DFG::CCallHelpers::setupArgumentsWithExecState(JSC::DFG::GPRReg, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm64)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/dfg/DFGCCallHelpers.h:558:41: error: no matching function for call to 'JSC::DFG::CCallHelpers::move(JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm64&, const GPRReg&)'
Attachments
patch (2.39 KB, patch)
2012-10-18 23:19 PDT, Yuqiang Xian
ossy: review+
yuqiang.xian: commit-queue-
Yuqiang Xian
Comment 1 2012-10-18 23:12:55 PDT
Sorry for the bug. Will fix it soon.
Yuqiang Xian
Comment 2 2012-10-18 23:19:37 PDT
Csaba Osztrogonác
Comment 3 2012-10-18 23:21:14 PDT
Comment on attachment 169555 [details] patch rs=me
Yuqiang Xian
Comment 4 2012-10-18 23:27:30 PDT
Note You need to log in before you can comment on or make changes to this bug.