[Qt] REGRESSION(r131858): It broke the ARM build https://bugs.webkit.org/show_bug.cgi?id=99809

Reviewed by Csaba Osztrogonác.

* dfg/DFGCCallHelpers.h:
(CCallHelpers):
(JSC::DFG::CCallHelpers::setupArgumentsWithExecState):


Canonical link: https://commits.webkit.org/117796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131860 268f45cc-cd09-0410-ab3c-d52691b4dbfc